--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
     "vaul": "^0.9.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
