add cdn url to project card image component src

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,10 @@
     "astrojs",
     "clsx",
     "lucide",
+    "probabalistically",
     "tailwindcss",
     "tsconfigs",
+    "uploadthing",
     "vaul"
   ]
 }
