create education data file, add data to about page, style mobile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "tailwindcss",
     "tsconfigs",
     "uploadthing",
+    "uuidv",
     "vaul"
-  ]
+  ],
+  "cSpell.words": ["Berklee", "Scholas"]
 }
