--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.0"
   }
