initial hero section content added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,14 @@
     "Behance",
     "Dribbble",
     "Luxottica",
+    "amors",
     "astro",
     "astrojs",
     "clsx",
+    "fontsource",
     "lucide",
     "probabalistically",
+    "raleway",
     "tailwindcss",
     "tsconfigs",
     "uploadthing",
