--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/check": "^0.8.1",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/raleway": "^5.0.19",
+    "@fontsource-variable/raleway": "^5.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-visually-hidden": "^1.1.0",
