role section complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.ignoreWords": [
     "Behance",
     "Dribbble",
+    "Grubhub",
     "Luxottica",
     "amors",
     "astro",
@@ -15,7 +16,8 @@
     "tsconfigs",
     "uploadthing",
     "uuidv",
-    "vaul"
+    "vaul",
+    "wireframes"
   ],
   "cSpell.words": ["Berklee", "Heusen", "Scholas"]
 }
