fixed additonal Image and Picture tab imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
     "vaul",
     "wireframes"
   ],
-  "cSpell.words": ["Berklee", "Heusen", "Scholas"]
+  "cSpell.words": ["Berklee", "Heusen", "Scholas", "utfs"]
 }
