added all section text to json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
     "vaul",
     "wireframes"
   ],
-  "cSpell.words": ["Berklee", "Heusen", "Scholas", "utfs"]
+  "cSpell.words": ["Berklee", "Carytown", "Heusen", "Scholas", "utfs"]
 }
