--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^4.11.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-astro": "^0.473.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
